# WebShop.AI

./: .gitignore  LEADERBOARD.md  README.md  makefile  pyproject.toml
baseline_models/: .gitignore  download_models.py
run_envs/: README.md  run_web_agent_env.py  run_web_agent_site_env.py  run_web_agent_text_env.py
tests/web-agent-site/engine/: test_goal.py
transfer/: predict_help.py
web_agent_site/envs/: README.md  __init__.py  web_agent_site_env.py  web_agent_text_env.py
web_agent_site/models/: __init__.py  baseline_models_adapter.py  il_policy.py  llm_policy.py  paper_rule_policy.py  rl_policy.py  simple_rule_policy.py
